[package]
name = "bbtag-online-delay"
version = "0.1.0"
edition = "2021"

[lib]
name = "dinput8"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.3", features = ["static-detour", "thiscall-abi"] }
simple-log = "2.1.1"
windows = { version = "0.58.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
] }
